# clinique

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  prescreen-data-explorer.txt  pyproject.toml  skills-lock.json
.github/workflows/: ci.yml  pages.yml
.workstream/prescreen-copilot/: PROVENANCE.md  access-boundary.md  data-inventory.md  datasets.manifest.json  design.md  l0_cases.jsonl  release-readiness-checklist.md  tracker.org  validation-summary.md
.workstreams/biostat-agent-suite/: design.md  tracker.org
.workstreams/edc-query-validation/: access-boundary.md  annotation-manual.md  controlled-rollout-gate.md  data-inventory.md  design.md  internal-data-manifest.template.json  release-readiness-checklist.md  silent-prospective-protocol.md  tracker.org  validation-summary.md
benchmarks/prescreenbench/: DATASET_CARD.md  README.md  build_seed.py
docs/: README.md  gcli-migration.md
explorer/: README.md  index.html  package-lock.json  package.json  playwright.config.ts
scripts/: pre-commit-bootstrap.sh  pre-commit-pytest.sh  pre-commit-ruff.sh
tests/: conftest.py  durable_e2e_harness.py  prescreen_helpers.py  test_conformance_triage.py  test_dryrun_datawall.py  test_dryrun_reproduction.py  test_durable_models.py  test_durable_prescreen.py  test_durable_prescreen_e2e.py  test_durable_resume.py  test_edc_cli.py  test_edc_detection.py  test_edc_fixtures.py  test_edc_internal_import.py  test_edc_internal_preflight.py  test_edc_metrics_reports.py  test_edc_replay.py  test_edc_rollout.py  test_edc_silent.py  test_edc_workstream_audit.py  test_estimand_checker.py  test_n2c2_harness.py  test_numeric_provenance.py  test_power_engines.py  test_power_orchestrator.py  test_prescreen_aggregation.py  test_prescreen_atomizer.py  test_prescreen_cli.py  test_prescreen_copilot_e2e.py  test_prescreen_embedding.py  test_prescreen_eval.py  test_prescreen_explorer_export.py  test_prescreen_ingestion.py  test_prescreen_judge.py  test_prescreen_llm_judge.py  test_prescreen_llm_judge_live.py  test_prescreen_mimic.py  test_prescreen_normalizer.py  test_prescreen_orchestrator.py  test_prescreen_pmc.py  (+15 more)
(+229 files in other folders)
