[project]
name = "clinique"
version = "0.0.1"
description = "Agentic tooling around the biostatistician persona in clinical trials"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
clinique = "clinique.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clinique"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
