[project]
name = "clinique"
description = "Agentic tooling around the biostatistician persona in clinical trials"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Philip Yang", email = "phissenschaft@gmail.com" }]
keywords = [
    "clinical-trials",
    "biostatistics",
    "cdisc",
    "provenance",
    "regulatory",
]
# Internal/private package — this classifier makes PyPI/twine refuse to upload it.
classifiers = ["Private :: Do Not Upload"]
dependencies = []
dynamic = ["version"]

[project.scripts]
clinique = "clinique.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
# Single source of truth for the version: src/clinique/__init__.py.
path = "src/clinique/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/clinique"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]
temporal = [
    "temporalio>=1.9",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "temporal: durable prescreen tests (requires uv sync --group temporal)",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I import-sort, UP pyupgrade, B bugbear, C4 comprehensions.
select = ["E", "W", "F", "I", "UP", "B", "C4"]

[tool.ruff.lint.per-file-ignores]
"src/clinique/prescreen/explorer_export.py" = ["E501"]
